--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -51,9 +51,11 @@
     border-radius: 4px;
     background-color: hsla(0, 0%, 0%, 0.48);
 
-    &:hover {
-      background-color: hsla(0, 0%, 0%, 0.78);
-      box-shadow: 0px 0px 2px 1px rgba(variables.$base-color, 0.75);
+    @media (hover: hover) {
+      &:hover {
+        background-color: hsla(0, 0%, 0%, 0.78);
+        box-shadow: 0px 0px 2px 1px rgba(variables.$base-color, 0.75);
+      }
     }
 
     svg {
